# model_interpret

Interpretator/: Interpretator.sln
Interpretator/Interpretator/: CMakeLists.txt  Interpretator.vcxproj  Interpretator.vcxproj.filters  Lexeme.h  Scanner.cpp  Scanner.h  String.h  Tables.h  preprocessor.h
Interpretator/Interpretator/tests/: Lexeme-tests.cpp  Preprocessor-tests.cpp  Scanner-tests.cpp  String-tests.cpp  test.txt  test1.txt  test2.txt
Interpreter/: CMakeLists.txt  Executor.cpp  Executor.h  Lexeme.h  Parser.cpp  Parser.cpp~RF1c083f14.TMP  Parser.h  Preprocessor.cpp  ReversePolishNotation.h  Scanner.cpp  Scanner.h  Stack.h  String.h  main.cpp  preprocessor.h
Interpreter/Executor/: Executor.cpp  Executor.h
Interpreter/Parser/: Parser.cpp  Parser.h  ReversePolishNotation.h
Interpreter/Scanner/: Preprocessor.cpp  Scanner.h  preprocessor.h
Interpreter/tests/: Executor-tests.cpp  Lexeme-tests.cpp  Parsers-tests.cpp  Preprocessor-tests.cpp  RPM-tests.cpp  Scanner-tests.cpp  Stack-tests.cpp  String-tests.cpp  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  testing.h
